--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "vue-ionic-hollow",
   "version": "0.0.1",
   "description": "An Ionic project",
+  "scripts": {
+    "start": "ionic serve",
+    "build": "ionic build"
+  },
   "devDependencies": {
     "@ionic/v1-toolkit": "^1.0.0",
+    "@types/angular": "1.6.56",
+    "awesome-typescript-loader": "5.2.1",
     "gulp": "^3.5.6",
     "gulp-clean-css": "^3.7.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "typescript": "3.7.2",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.10"
   }
 }
