--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "@ionic/v1-toolkit": "^1.0.0",
     "@types/angular": "1.6.56",
+    "@types/node": "12.12.11",
     "awesome-typescript-loader": "5.2.1",
+    "html-loader": "0.5.5",
     "npm-run-all": "4.1.5",
     "typescript": "3.7.2",
     "webpack": "4.41.2",
